JumpScript/tests/baselines/reference/noImplicitThisObjectLiterals.errors.txt
tests/cases/compiler/noImplicitThisObjectLiterals.jump(2,8): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
tests/cases/compiler/noImplicitThisObjectLiterals.jump(4,16): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
tests/cases/compiler/noImplicitThisObjectLiterals.jump(7,16): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== tests/cases/compiler/noImplicitThisObjectLiterals.jump (3 errors) ====
    let o = {
        d: this, // error, this: any
           ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        m() {
            return this.d.length; // error, this: any
                   ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        },
        f: function() {
            return this.d.length; // error, this: any
                   ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
    }
    